--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -92,6 +92,7 @@ dissemblance ,/n./@偽裝;
 distillation ,/n./@蒸餾;
 distribution ,/n./@分布;,/n./@分配;
 dodecahedron ,/n./@十二面体;
+electroplate ,/vt./@電鍍;,/n./@電鍍品;
 emancipation ,/n./@解放;
 embarrassing ,/adj./@令人尴尬的;
 encroachment ,/n./@侵犯;,/n./@蚕食;
@@ -177,6 +178,7 @@ modification ,/n./@修正;
 monotheistic ,/adj./@一神論的;,/adj./@一神教的;
 narcissistic ,/adj./@孤芳自赏的;
 neurasthenic ,/adj./@神經衰弱的;,/adj./@神經衰弱症的;
+neurological ,/adj./@神經系統的;,/adj./@神經學的;,/adj./@神經病學的;
 nevertheless ,/conj./@尽管如此;
 notification ,/n./@通知;
 occupational ,/adj./@职业的;
