--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -313,6 +313,7 @@ conform ,/v./@符合;,/v./@遵守;
 confuse ,/v./@使困惑;
 conical ,/adj./@圓錐形的;
 conifer ,/n./@松柏;
+conjoin ,/v./@結合;,/v./@聯合;
 conjure ,/vt./@用魔法變出;,/vt./@唸咒召喚;,/vi./@施魔法;,/vi./@變魔術;,/v./@令人想起;
 connect ,/v./@連接;
 connote ,/v./@意味著;
@@ -363,6 +364,7 @@ crucial ,/v./@重要的;
 crucify ,/v./@在十字架上釘死;
 cruelly ,/adv./@殘忍地;
 cruelty ,/n./@殘忍;
+crumble ,/v./@粉碎;,/vi./@碎裂;,/vi./@崩潰;,/n./@酥皮;,/n./@酥皮布丁;
 crumple ,/v./@弄皺;
 cryptic ,/adj./@神秘的;,/adj./@隱祕的;
 cryptid ,/n./@神秘生物;
@@ -568,6 +570,7 @@ faculty ,/n./@官能;,/n./@本領;,/n./@學係;,/n./@院系;,/n./@才能;
 failure ,/n./@失敗;
 fallacy ,/n./@謬誤;,/n./@謬論;,/n./@謬誤的推理;
 fanatic ,/n./@狂熱者;,/n./@狂熱分子;,/n./@入迷者;,/adj./@狂熱的;,/adj./@入迷的;
+fanfare ,/n./@號角齊鳴;
 fantasy ,/n./@幻想;
 faraway ,/adj./@很遠的;
 farrier ,/n./@蹄鐵匠;,/n./@蹄鐵工;
