--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -1052,6 +1052,7 @@ revision ,/n./@复习;,/n./@修订;
 rhapsody ,/n./@狂想曲;
 rhetoric ,/n./@修辭;,/n./@修辭學;,/n./@雄辯;,/n./@言辞;,/n./@辭令;,/n./@言語;
 rhinitis ,/n./@鼻炎;
+ricochet ,/vi./@跳飛;,/vi./@跳射;,/n./@跳飛;,/n./@跳彈;
 ridicule ,/v./@嘲笑;,/vt./@揶揄;,/vt./@奚落;
 rigorous ,/adj./@嚴厲的;
 robotics ,/n./@機器人學;
