--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -92,6 +92,7 @@ dissemblance
 distillation
 distribution
 dodecahedron
+electroplate
 emancipation
 embarrassing
 encroachment
@@ -177,6 +178,7 @@ modification
 monotheistic
 narcissistic
 neurasthenic
+neurological
 nevertheless
 notification
 occupational
