--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -313,6 +313,7 @@ conform
 confuse
 conical
 conifer
+conjoin
 conjure
 connect
 connote
@@ -363,6 +364,7 @@ crucial
 crucify
 cruelly
 cruelty
+crumble
 crumple
 cryptic
 cryptid
@@ -568,6 +570,7 @@ faculty
 failure
 fallacy
 fanatic
+fanfare
 fantasy
 faraway
 farrier
