--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -250,7 +250,7 @@ denotation ,/n./@符号;,/n./@表示;,/n./@意义;
 department ,/n./@部@门;,/n./@系;
 deposition ,/n./@免職;,/n./@罷官;,/n./@废黜;,/n./@证词;,/n./@沉澱;,/n./@作證;
 deprecated ,/v./@弃用;,/v./@不赞成;,/v./@不宜用;,/adj./@废弃的;,/adj./@弃用的;
-depression ,/n./@抑郁;,/n./@萧条;
+depression ,/n./@抑郁;,/n./@萧条;,/n./@沮喪;
 derogatory ,/adj./@贬低的;
 desalinate ,/v./@脫鹽;,/v./@淡化;
 descendant ,/n./@子孙;,/n./@后裔;
@@ -700,6 +700,7 @@ sanitation ,/n./@公共卫生;
 saturation ,/n./@飽和;,/n./@浸泡;,/n./@饱和度;
 scatheless ,/adj./@无损伤的;
 scientific ,/adj./@科学的;
+scrupulous ,/adj./@嚴謹的;,/adj./@一絲不苟的;,/adj./@審慎的;,/adj./@嚴格認真的;
 scrutinise ,/v./@仔细检查;
 Scunthorpe ,/n./@斯坎索普;,/n./@斯肯索普;
 seamstress ,/n./@女裁縫;
