--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -108,7 +108,7 @@ exaggeration ,/n./@夸大;,/n./@夸张;
 exasperation ,/n./@憤怒;,/n./@惡化;
 excruciating ,/adj./@難以忍受的;,/adj./@極痛苦的;
 experimental ,/adj./@实验性的;
-exploitation ,/n./@開發;,/n./@利用;
+exploitation ,/n./@開發;,/n./@利用;,/n./@開採;,/n./@剝削;
 extravagance ,/n./@奢侈;,/n./@浪費;
 Gemeinschaft ,/n./@社區;,/n./@團體;,/n./@社團;,/n./@集體;
 geometrician ,/n./@幾何學家;
@@ -217,6 +217,7 @@ putrefaction ,/n./@化膿;,/n./@腐烂;,/n./@腐敗;
 quadriplegic ,/adj./@四肢瘫痪的;,/n./@四肢瘫痪者;
 quasicrystal ,/n./@準晶體;
 questionable ,/adj./@可疑的;
+ramification ,/n./@延伸性影響;
 reassignment ,/n./@再分配;,/n./@再指派;,/n./@再指定;,/n./@重新分配;
 recognizable ,/adj./@可辨認的;,/adj./@可認出的;,/adj./@可承認的;
 recollection ,/n./@回憶;,/n./@記憶;,/n./@回憶錄;,/n./@往事;,/n./@記憶力;
