--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -109,6 +109,7 @@ predominantly ,/adv./@主要地;,/adv./@顯著的;
 prepositional ,/adj./@介詞的;,/adj./@前置詞的;
 procrastinate ,/vi./@拖延;
 pronunciation ,/n./@發音;,/n./@讀法;,/n./@讀音;
+provincialism ,/n./@地方主義;,/n./@地方觀念;,/n./@地方風俗;,/n./@地方習氣;
 pseudoscience ,/n./@偽科學;
 psychological ,/adj./@心理学的;
 psychosomatic ,/adj./@心理压力造成的;
