--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -299,6 +299,7 @@ fart ,/v./@放屁;
 fast ,/adv./@快;,/adj./@快的;
 fate ,/n./@命運;
 faux ,/adj./@假的;
+fawn ,/vi./@奉承;,/vi./@討好;,/vi./@諂媚;,/vi./@搖尾乞憐;
 feal ,/adj./@誠實的;
 fear ,/n./@恐懼;
 feat ,/n./@功績;,/n./@壯舉;,/n./@雜技表演;,/adj./@合適的;
@@ -362,6 +363,7 @@ fuse ,/v./@熔化;,/n./@保險絲;,/n./@導火綫;,/v./@融合;,/v./@熔合;,/vt
 fuss ,/n./@焦躁;,/n./@忙亂;
 gage ,/n./@抵押;
 gain ,/v./@獲得;
+gait ,/n./@步態;,/n./@步法;,/n./@步伐;
 gale ,/n./@強風;
 game ,/n./@遊戲;
 gank ,/v./@調情;,/v./@趁機攻擊;
