--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -571,7 +571,7 @@ facial ,/adj./@面部的;
 factor ,/n./@因素;
 faggot ,/n./@柴把;,/v./@同性戀;
 falcon ,/n./@獵鷹;,/n./@隼;
-falter ,/v./@支吾;
+falter ,/v./@支吾;,/vi./@踉蹌;,/vi./@動搖;,/vi./@猶豫;,/vi./@畏縮;,/vi./@衰退;,/vi./@衰落;
 family ,/n./@家庭;
 famous ,/adj./@著名的;
 fandom ,/n./@影迷;
@@ -693,6 +693,7 @@ guffaw ,/v./@哄笑;
 guilty ,/adj./@有罪的;,/adj./@內疚的;
 guitar ,/n./@吉他;
 gurgle ,/n./@咯咯聲;
+gutter ,/n./@排水溝;,/n./@街溝;,/n./@貧民窟;
 hadron ,/n./@强子;
 haggle ,/n./@爭論;,/n./@討價還價;,/vi./@爭論;,/vi./@討價還價;
 hallow ,/n./@神聖;,/v./@神化;,/n./@聖徒;,/n./@聖器;
