--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1272,7 +1272,7 @@ session ,/n./@會議;
 several ,/adj./@幾個;,/adj./@數個;
 shabbat ,/n./@安息日;
 shallow ,/adj./@淺的;
-shamble ,/v./@蹣跚;,/v./@搖晃地走;
+shamble ,/v./@蹣跚;,/v./@搖晃地走;,/n./@搖晃的腳步;
 sharpen ,/vt./@削尖;,/vt./@磨快;
 shatter ,/vt./@打碎;,/vt./@破坏;,/vi./@碎裂;
 shelter ,/v./@庇護;
@@ -1333,7 +1333,7 @@ spinach ,/n./@菠菜;
 spittle ,/n./@唾沫;
 sponsor ,/n./@贊助;,/n./@贊助者;
 spousal ,/adj./@配偶的;,/adj./@与配偶有关的;
-squalid ,/adj./@骯髒的;,/adj./@汙穢的;,/adj./@卑劣的;
+squalid ,/adj./@骯髒的;,/adj./@汙穢的;,/adj./@卑劣的;,/adj./@卑鄙的;,/adj./@惡劣的;,/adj./@醜惡的;
 squeeze ,/v./@擠榨;
 stadium ,/n./@體育場;,/n./@運動場;
 staffer ,/n./@職員;,/n./@工作人員;
