--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -548,6 +548,7 @@ function ,/n./@作用;,/n./@功能;,/n./@函數;,/v./@运行;
 fuselage ,/n./@機身;
 futility ,/n./@無用;,/n./@徒勞;,/n./@無效;,/n./@無益;
 Galician ,/n./@加利西亞語;,/adj./@加利西亞的;,/n./@加利西亞人;,/adj./@加利西亞人的;,/adj./@加利西亞語的;
+gamester ,/n./@賭徒;,/n./@玩家;
 garrison ,/n./@要塞;,/v./@駐防;,/v./@守衛;,/n./@卫戍部队;
 gauntlet ,/n./@长手套;,/n./@金属护手;
 generate ,/v./@产生;,/v./@發生;,/v./@生成;,/v./@生殖;
@@ -613,6 +614,7 @@ hornbill ,/n./@犀鸟;
 horrible ,/adj./@可怕的;
 horrific ,/adj./@可怕的;
 hospital ,/n./@医院;
+hot-wire ,/vt./@熱線發動;
 humanism ,/n./@人道主義;
 humanist ,/n./@人文主義者;,/n./@人道主義者;,/adj./@人道主義的;,/adj./@人文主義的;
 humanity ,/n./@人類;,/n./@人性;
@@ -806,6 +808,7 @@ mourning ,/n./@哀痛;
 movement ,/n./@运动;
 multiple ,/adj./@多样的;
 multiply ,/v./@相乘;,/v./@相加;
+munition ,/n./@軍需品;,/n./@軍火;
 murderer ,/n./@谋杀者;
 muscular ,/adj./@肌肉的;,/adj./@肌肉发达的;
 mushroom ,/n./@蘑菇;
