--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -172,6 +172,7 @@ capillary ,/n./@毛细管;
 capitulum ,/n./@章節;,/n./@篇;
 Capricorn ,/n./@摩羯座;,/n./@摩羯宮;,/n./@南回歸線;
 captivate ,/v./@迷住;
+cardboard ,/n./@硬紙板;,/n./@卡紙板;,/adj./@硬紙板製的;,/adj./@膚淺的;,/adj./@虛構的;
 careerist ,/n./@野心家;,/n./@事业狂;
 carefully ,/adv./@小心地;
 carpenter ,/n./@木匠;
@@ -229,7 +230,7 @@ commingle ,/v./@充分混合;
 commissar ,/n./@政治委员;,/n./@人民委员;
 committee ,/n./@委員會;
 commodity ,/n./@商品;
-commotion ,/n./@騷亂;
+commotion ,/n./@騷亂;,/n./@喧鬧;
 communism ,/n./@共產主義;
 communist ,/n./@共產主義者;
 community ,/n./@社会;,/n./@社區;,/n./@社团;,/n./@团体;,/n./@群落;
@@ -1019,6 +1020,7 @@ spiritual ,/adj./@精神的;,/adj./@虔诚的;
 spongebob ,/n./@海绵宝宝;
 spotlight ,/n./@聚光燈;,/v./@聚光;
 sprightly ,/adv./@活潑地;,/adj./@活潑的;,/adj./@愉快的;
+squeamish ,/adj./@易嘔吐的;,/adj./@易噁心的;,/adj./@過分審慎的;
 stability ,/n./@穩定性;
 stalemate ,/n./@僵局;,/n./@困境;
 starboard ,/n./@右舷;,/n./@右侧;
@@ -1085,7 +1087,7 @@ trademark ,/n./@商標;
 tradition ,/n./@传统;,/n./@惯例;
 transcend ,/v./@超越;,/v./@戰勝;,/vt./@勝過;,/vt./@優於;
 transform ,/v./@转换;,/v./@改观;
-transient ,/adj./@短暫的;,/adj./@暂住的;
+transient ,/adj./@短暫的;,/adj./@暂住的;,/adj./@一時的;,/adj./@瞬間的;
 translate ,/v./@翻譯;
 transmute ,/v./@变化;
 transonic ,/adj./@接近音速的;
