--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -548,6 +548,7 @@ function
 fuselage
 futility
 Galician
+gamester
 garrison
 gauntlet
 generate
@@ -613,6 +614,7 @@ hornbill
 horrible
 horrific
 hospital
+hot-wire
 humanism
 humanist
 humanity
@@ -806,6 +808,7 @@ mourning
 movement
 multiple
 multiply
+munition
 murderer
 muscular
 mushroom
