--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -172,6 +172,7 @@ capillary
 capitulum
 Capricorn
 captivate
+cardboard
 careerist
 carefully
 carpenter
@@ -1019,6 +1020,7 @@ spiritual
 spongebob
 spotlight
 sprightly
+squeamish
 stability
 stalemate
 starboard
