--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -333,6 +333,7 @@ experiment ,/n./@实验;
 expiration ,/n./@呼气;,/n./@终结;
 exposition ,/n./@闡述;,/n./@解說;,/n./@展覽會;,/n./@博覽會;,/n./@背景介紹;
 expression ,/n./@表达;
+extendable ,/adj./@可伸縮的;,/adj./@可延展的;,/adj./@可延期的;
 extensible ,/adj./@可擴展的;,/adj./@可擴張的;
 extinction ,/n./@灭亡;
 extinguish ,/v./使@消亡;,/v./@熄灭;,/v./@压制;
@@ -438,6 +439,7 @@ innovation ,/n./@革新;,/n./@创新;
 insistence ,/n./@坚持;
 inspection ,/n./@视察;
 instrument ,/n./@乐器;
+insurgency ,/n./@暴動;
 intangible ,/adj./@無形的;,/adj./@無法感知的;
 internship ,/n./@實習;,/n./@實習生;,/n./@實習期;
 interprete ,/v./@翻译;
@@ -498,7 +500,7 @@ masturbate ,/vi./@手淫;
 meaningful ,/adj./@有意义的;
 mechanical ,/adj./@机械的;
 meditation ,/n./@冥想;
-megalithic ,/adj./@巨石建造的;
+megalithic ,/adj./@巨石建造的;,/adj./@巨石時期的;
 melancholy ,/n./@忧郁;,/n./@悲哀;,/n./@愁思;,/adj./@忧郁的;,/adj./@悲伤的;
 membership ,/n./@會員資格;,/n./@全體成員;
 menstruate ,/vi./@行經;,/vi./@月經來潮;
@@ -828,3 +830,4 @@ widespread ,/adj./@广泛传播的;
 wilderness ,/n./@荒野;
 withdrawal ,/n./@撤退;,/n./@收回;
 woodpecker ,/n./@啄木鳥;
+yesteryear ,/n./@昔日;,/n./@舊時;,/n./@往昔;
