--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -210,6 +210,7 @@ holographic ,/adj./@全息攝影的;,/adj./@全息技術的;,/adj./@全息成像
 hospitality ,/n./@好客;,/n./@款待;,/n./@殷勤;
 humiliation ,/n./@羞辱;,/n./@蒙羞;
 humiliatory ,/adj./@出丑的;,/adj./@蒙羞的;
+hydrocarbon ,/n./@碳氫化合物;
 hydrologist ,/n./@水文學家;
 hyperactive ,/adj./@多動的;,/adj./@過度活躍的;,/adj./@亢奮的;,/adj./@亢進的;
 hypothermic ,/adj./@体温过低的;
