--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -29,6 +29,7 @@ asynchronous ,/adj./@异步的;,/adj./@不同时的;
 auscultation ,/n./@听诊;
 authenticate ,/v./@鑒定;,/v./@證明;,/vt./@證實;
 authenticity ,/n./@真实性;,/n./@可靠性;,/n./@可信賴性;
+belligerence ,/n./@好戰性;,/n./@好鬥性;,/n./@交戰狀態;
 bloodletting ,/n./@放血疗法;
 bureaucratic ,/adj./@官僚主義的;
 cancellation ,/n./@刪除;,/n./@取消;
@@ -239,6 +240,7 @@ sophisticate ,/v./@复杂化;
 sporadically ,/adv./@零星地;,/adv./@偶發的;
 stereoscopic ,/adj./@立體的;,/adj./@有立體感的;,/adj./@立體成像的;,/adj./@體視的;
 subconscious ,/n./@潛意識;,/n./@下意識;,/adj./@潛意識的;,/adj./@下意識的;
+subcontinent ,/n./@次大陸;
 subscription ,/n./@订阅;
 subsequently ,/adv./@隨後;,/adv./@其後;,/adv./@接著;
 substitution ,/n./@代替;,/n./@置换;
