--- a/Files/lang/ch/chinese16.csv
+++ b/Files/lang/ch/chinese16.csv
@@ -5,5 +5,6 @@ disproportionate ,/adj./@不成比例的;
 entrepreneurship ,/n./@創業精神;
 extraterrestrial ,/adj./@地球外的;,/adj./@地球大氣層外的;
 immunodeficiency ,/n./@免疫缺陷;
+institutionalize ,/vt./@使制度化;
 quasicrystalline ,/adj./@準晶體的;
 unconventionally ,/adj./@不按惯例地;
