--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -478,6 +478,7 @@ hour ,/n./@小時;
 howl ,/v./@嚎叫;,/v./@嚎哭;,/n./@嚎叫;,/n./@嚎哭;
 huge ,/adj./@大的;
 hull ,/n./@船体;,/n./@殼;,/n./@荚;,/n./@皮;,/n./@蒂;,/n./@花萼;,/n./@船身;,/n./@殼體;
+hump ,/n./@隆起;,/n./@小丘;,/n./@駝峰;,/n./@駝背;,/n./@土墩;
 hunt ,/v./@捕獵;
 hurl ,/v./@猛投;,/v./@猛擲;,/vt./@投擲;,/vt./@拋出;
 hurt ,/v./@傷害;
