--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -130,6 +130,7 @@ belly ,/n./@腹部;,/n./@胃;
 below ,/prep./在...之@下;
 berth ,/v./@停泊;,/n./@泊位;
 bible ,/n./@聖經;
+bigot ,/n./@偏執者;,/n./@頑固者;,/n./@固執者;
 binge ,/n./@狂歡;,/v./@狂歡;
 biome ,/n./@生物羣係;,/n./@羣落;
 biped ,/n./@兩足動物;
@@ -1025,7 +1026,7 @@ rural ,/adj./@鄉村的;
 sable ,/n./@紫貂;,/n./@黑貂;,/n./@貂皮;
 salad ,/n./@色拉;,/n./@涼拌菜;
 salon ,/n./@沙龍;,/n./@客廳;,/n./@畫廊;
-salty ,/adj./@鹹的;
+salty ,/adj./@鹹的;,/adj./@含鹽的;,/adj./@粗俗的;
 samen ,/n./@精液;
 sauce ,/n./@沙司;,/n./@醬油;,/n./@调味汁;
 savor ,/n./@滋味;,/n./@氣味;,/n./@食欲;,/v./@品嘗;
