--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -142,7 +142,7 @@ banter ,/v./@戲虐;,/n./@打趣;,/vi./@談笑;,/vt./@取笑;
 barium ,/n./@鋇;
 barley ,/n./@大麥;
 barrel ,/n./@桶;,/n./@管;,/n./@槍管;,/n./@砲筒;,/n./@大桶;,/n./@一桶的量;,/n./@36加侖的量;
-barren ,/adj./@不育的;,/adj./@貧瘠的;
+barren ,/adj./@不育的;,/adj./@貧瘠的;,/adj./@不結果實的;,/adj./@荒蕪的;
 barter ,/n./@易貨貿易;
 baryon ,/n./@重子;
 basalt ,/n./@玄武岩;
@@ -318,6 +318,7 @@ cobble ,/n./@鵝卵石;
 cocoon ,/n./@茧;,/n./@蚕茧;
 coerce ,/v./@強制;,/v./@迫使;,/vt./@强迫;
 coffee ,/n./@咖啡;
+coffer ,/n./@保險箱;,/n./@金庫;,/n./@花格鑲板;,/n./@保險櫃;
 coffin ,/n./@棺材;
 cogent ,/adj./@令人信服的;,/adj./@相關的;
 cohort ,/n./@隊列;,/n./@同期群;,/n./@同生群;,/n./@步兵隊;,/n./@同夥者;,/n./@同類型的人;
@@ -708,6 +709,7 @@ harrow ,/n./@耙;,/vt./@耙;,/vt./@煩擾;,/vt./@折磨;
 hassle ,/n./@麻煩;,/n./@困難;,/v./@爭辯;
 hasten ,/v./@加速;
 hatred ,/n./@仇恨;
+hawker ,/n./@叫賣小販;
 hazard ,/n./@危险;,/n./@隐患;,/n./@风险;,/n./@障碍物;
 hazmat ,/redirected./@target="hazardous material";
 health ,/n./@健康;
@@ -1059,6 +1061,7 @@ parity ,/n./@同等;,/n./@相等;,/n./@平價;
 parlay ,/v./(使)@增値;
 parley ,/v./@談判;,/v./@會談;
 parlor ,/n./@客廳;
+parody ,/n./@諷刺性模仿作品;,/n./@戲謔性的模仿;
 parole ,/n./@誓言;,/n./@假釋;,/vt./@假释;
 parrot ,/n./@鸚鵡;
 partly ,/adv./@部分地;
