--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -116,6 +116,7 @@ avocado ,/n./@鱷梨;,/n./@鱷梨樹;
 awesome ,/adj./@可怕的;
 awkward ,/adj./@尴尬的;
 baggage ,/n./@行李;
+bailout ,/n./@緊急財政援助;,/n./@財務救濟;,/n./@紓困;
 baklava ,/n./@蜜糖果仁千层酥;,/n./@果仁蜜饼;
 balance ,/n./@平衡;
 balcony ,/n./@陽台;,/n./@露台;,/n./@包廂;,/n./@樓廳;
@@ -1138,6 +1139,7 @@ purpose ,/n./@目的;,/n./@用途;,/n./@企圖;
 pursuit ,/v./@追求;
 purview ,/n./@視野;,/n./@範圍;,/n./@眼界;
 pyramid ,/n./@金字塔;
+pyrrhic ,/adj./@付出慘重代價的;
 Qabalah ,/redirected./@target="Kabbalah";
 qualify ,/v./@限制;,/v./@合格;,/v./@授權;
 quality ,/n./@質量;
