--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -41,7 +41,7 @@ agrarian ,/adj./@土地的;,/adj./@耕地的;,/adj./@农业的;,/adj./@农村的
 airborne ,/adj./@空運的;,/adj./@空氣傳播的;,/adj./@空降的;,/adj./@飛行中的;,/adj./@在空中的;
 aircraft ,/n./@飛行器;,/n./@航空器;
 airdrome ,/n./@飛機場;
-airstrip ,/n./@飛機跑道;
+airstrip ,/n./@飛機跑道;,/n./@小型機場;,/n./@簡便機場;,/n./@臨時飛機跑道;
 airtight ,/adj./@无懈可击的;
 alacrity ,/n./@樂意;,/n./@欣然;
 allegory ,/n./@寓言;,/n./@諷喻;
@@ -320,6 +320,7 @@ deadlock ,/n./@僵局;,/n./@僵持;
 debugger ,/n./@调试器;,/n./@调试程序;
 decadent ,/adj./@颓废的;
 December ,/n./@十二月;
+decimate ,/vt./@大批殺死;,/vt./@大量毀滅;,/vt./@重挫;,/vt./@大大削弱;
 decision ,/n./@决定;
 decisive ,/adj./@决断的;
 decorate ,/v./@装修;
@@ -402,6 +403,7 @@ dominant ,/adj./@显性的;
 dominate ,/v./@控制;,/v./@支配;,/v./@统治;
 dominion ,/n./@主权;,/n./@所有權;,/n./@統治權;,/n./@統治;,/n./@管轄;,/n./@領土;,/n./@領地;
 donation ,/n./@捐赠;
+doorstep ,/n./@門階;
 dopamine ,/n./@多巴胺;
 doubtful ,/adj./@怀疑的;
 doughnut ,/n./@甜甜圈;
@@ -1262,6 +1264,7 @@ trespass ,/v./@擅闖;,/v./@侵入;,/v./@冒犯;,/v./@打擾;,/vi./@犯罪;,/n./
 triangle ,/n./@三角形;,/n./@三角;,/n./@三角形之物;,/n./@三角鐵;,/n./@三角板;,/n./@三件套;,/n./@三角關係;,/n./@三角星座;
 tribunal ,/n./@法庭;,/n./@仲裁机构;,/n./@公斷;,/n./@法官席;
 trillion ,/n./@万亿;
+trombone ,/n./@長號;,/n./@伸縮長號;
 tropical ,/adj./@熱帶的;,/adj./@炎熱潮濕的;,/adj./@轉義的;,/adj./@回歸線的;
 truncate ,/v./@截斷;,/v./@縮短;,/adj./@截斷的;
 tungsten ,/n./@鎢;
