--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -207,6 +207,7 @@ cigarette ,/n./@香烟;
 cinematic ,/adj./@電影的;,/adj./@有电影特征的;
 circuitry ,/n./@电路;,/n./@电路系统;,/n./@电路装置;,/n./@电路元件;
 circulate ,/v./@循环;
+cisgender ,/adj./@順性別的;
 citizenry ,/n./@全體公民;,/n./@全體市民;
 classical ,/adj./@經典的;,/adj./@古典的;
 classmate ,/n./@同学;
@@ -255,7 +256,7 @@ consensus ,/n./@一致;,/n./@舆论;,/n./@合意;
 consonant ,/n./@辅音;,/n./@辅音字母;
 construct ,/v./@建筑;
 consulate ,/n./@領事館;
-contender ,/n./@竞争者;,/n./@争夺者;
+contender ,/n./@竞争者;,/n./@争夺者;,/n./@角逐者;
 contented ,/adj./@满足的;
 continent ,/n./@大陸;,/adj./@節制的;
 continual ,/adj./@不间断的;,/adj./@连续的;
@@ -331,6 +332,7 @@ detective ,/n./@侦探;
 determine ,/v./@下决心;,/v./@确定;
 deterrent ,/adj./@威慑的;,/n./@威慑;
 detonator ,/n./@雷管;,/n./@炸藥;,/n./@導火索;
+detriment ,/n./@損傷;,/n./@損害;
 devastate ,/v./@毀滅;,/v./@毀壞;
 developer ,/n./@开发者;
 dexterity ,/n./@灵巧;,/n./@机敏;,/n./@敏捷;
@@ -416,7 +418,7 @@ enlighten ,/v./@启发;,/v./@启蒙;
 enrapture ,/v./@使狂喜;,/v./@使著迷;
 ensurance ,/n./@保障;
 entertain ,/v./使@娱乐;
-entourage ,/n./@随从;
+entourage ,/n./@随从;,/n./@隨行人員;,/n./@隨員;
 enumerate ,/v./@列舉;,/v./@枚舉;
 enunciate ,/v./@明確表達;
 eparchial ,/adj./@主教管區的;
@@ -841,6 +843,7 @@ pollution ,/n./@污染;
 polygraph ,/n./@測謊儀;,/n./@測謊機;
 ponderous ,/adj./@笨重的;
 porcelain ,/n./@瓷;,/n./@瓷器;
+porcupine ,/n./@豪豬;
 portfolio ,/n./@公文包;,/n./@文件夹;
 posterior ,/adj./@後面的;
 posterity ,/n./@後代;,/n./@後世;,/n./@後裔;
