--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -333,6 +333,7 @@ experiment
 expiration
 exposition
 expression
+extendable
 extensible
 extinction
 extinguish
@@ -438,6 +439,7 @@ innovation
 insistence
 inspection
 instrument
+insurgency
 intangible
 internship
 interprete
@@ -828,3 +830,4 @@ widespread
 wilderness
 withdrawal
 woodpecker
+yesteryear
