--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -29,6 +29,7 @@ asynchronous
 auscultation
 authenticate
 authenticity
+belligerence
 bloodletting
 bureaucratic
 cancellation
@@ -239,6 +240,7 @@ sophisticate
 sporadically
 stereoscopic
 subconscious
+subcontinent
 subscription
 subsequently
 substitution
