--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -318,6 +318,7 @@ cobble
 cocoon
 coerce
 coffee
+coffer
 coffin
 cogent
 cohort
@@ -708,6 +709,7 @@ harrow
 hassle
 hasten
 hatred
+hawker
 hazard
 hazmat
 health
@@ -1059,6 +1061,7 @@ parity
 parlay
 parley
 parlor
+parody
 parole
 parrot
 partly
