--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -116,6 +116,7 @@ avocado
 awesome
 awkward
 baggage
+bailout
 baklava
 balance
 balcony
@@ -1138,6 +1139,7 @@ purpose
 pursuit
 purview
 pyramid
+pyrrhic
 Qabalah
 qualify
 quality
