--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -320,6 +320,7 @@ deadlock
 debugger
 decadent
 December
+decimate
 decision
 decisive
 decorate
@@ -402,6 +403,7 @@ dominant
 dominate
 dominion
 donation
+doorstep
 dopamine
 doubtful
 doughnut
@@ -1262,6 +1264,7 @@ trespass
 triangle
 tribunal
 trillion
+trombone
 tropical
 truncate
 tungsten
