--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -207,6 +207,7 @@ cigarette
 cinematic
 circuitry
 circulate
+cisgender
 citizenry
 classical
 classmate
@@ -331,6 +332,7 @@ detective
 determine
 deterrent
 detonator
+detriment
 devastate
 developer
 dexterity
@@ -841,6 +843,7 @@ pollution
 polygraph
 ponderous
 porcelain
+porcupine
 portfolio
 posterior
 posterity
