--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -800,6 +800,7 @@ underscore ,/n./@下劃線;,/n./@底線;,/v./@強調;
 understand ,/v./@明白;,/v./@懂得;
 undeterred ,/adj./@未受阻的;,/adj./@不受影響的;
 unexpected ,/adj./@意外的;
+unfettered ,/adj./@不受束縛的;,/adj./@不受約束的;
 unilateral ,/adj./@单方面的;
 university ,/n./@大學;
 unorthodox ,/adj./@非正統的;,/adj./@非傳統的;,/adj./@不正規的;,/adj./@異教的;,/adj./@另类的;
