--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -291,6 +291,7 @@ memorabilia ,/n./@值得紀念的事物;,/n./@紀念品;
 merchandise ,/n./@商品;,/n./@貨物;,/vt./@買賣;,/vt./@經銷;
 meritocracy ,/n./@精英領導制度;,/n./@精英管理的社會;,/n./@精英領導體制;
 metaphysics ,/n./@形而上学;
+metastasize ,/vi./@轉移;,/vi./@擴散;
 methodology ,/n./@方法論;
 microscopic ,/adj./@精微的;,/adj./@微小的;,/adj./@顯微鏡的;,/adj./@只能從顯微鏡裡看到的;
 mindfulness ,/n./@留心;,/n./@察覺;,/n./@正念;,/n./@注意;,/n./@覺知;
@@ -338,6 +339,7 @@ personality ,/n./@个性;
 perspective ,/n./@观点;,/n./@视角;
 pessimistic ,/adj./@悲观的;
 planetarium ,/n./@天文館;,/n./@天文臺;,/n./@天象儀;,/n./@行星儀;,/n./@天體運轉模型;
+pluralistic ,/adj./@多重性的;,/adj./@多元的;
 poltergeist ,/n./@搗蛋鬼;
 polygrapher ,/n./@測謊師;
 pomegranate ,/n./@石榴;,/n./@石榴树;
