--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -334,7 +334,7 @@ cynic ,/n./@忿世嫉俗者;
 dairy ,/n./@乳業;
 dance ,/v./@跳舞;
 datum ,/n./@數據;
-daunt ,/v./@驚嚇;
+daunt ,/v./@驚嚇;,/vt./@嚇倒;
 death ,/n./@死亡;
 debug ,/v./@調試;
 debut ,/n./@初次登臺;,/n./@首次亮相;
@@ -1213,7 +1213,7 @@ stiff ,/adj./@拘謹的;,/adj./@僵硬的;,/adj./@剛強的;,/adj./@強烈的;,/
 still ,/adv./@一直;,/adv./@仍然;
 sting ,/v./@刺;,/v./@蟄;
 stock ,/n./@儲備;,/n./@股票;
-stoic ,/adj./@禁慾的;,/n./@禁慾主義者;
+stoic ,/redirected./@target="stoical";,/n./@禁慾主義者;
 Stoic ,/adj./@斯多葛學派的;,/n./@斯多葛學派哲學家;
 stone ,/n./@石頭;
 stood ,/v./@站;
@@ -1371,6 +1371,7 @@ valid ,/adj./@有效的;
 valor ,/n./@英勇;,/n./@勇猛;
 value ,/n./@價値;
 valve ,/n./@閥;
+vapid ,/adj./@無味的;,/adj./@乏味的;,/adj./@枯燥的;
 vault ,/n./@貯藏室;
 venom ,/n./@毒液;,/n./@惡意;
 verge ,/vt./@瀕臨;,/n./@邊緣;
