--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -123,6 +123,7 @@ autism ,/n./@自閉症;
 autumn ,/n./@秋;
 avatar ,/n./@頭像;,/n./@化身;,/n./@虛擬化身;,/n./@替身;,/n./@人物圖標;
 avenue ,/n./@大街;
+averse ,/adj./@嫌惡的;,/adj./@反對的;
 aviate ,/v./@飛行;
 avowal ,/n./@聲明;,/n./@承認;,/n./@宣佈;
 babble ,/v./@喋喋不休;,/v./@含糊不清地說;
@@ -413,6 +414,7 @@ defend ,/v./@保衛;,/v./@防守;
 defile ,/v./@污損;,/v./@弄髒;,/v./@污染;
 define ,/v./@定義;
 deform ,/v./@弄變形；@弄殘;
+defuse ,/vt./@拆除;,/vt./@緩和;
 degree ,/n./@度;,/n./@學位;,/n./@級別;
 deject ,/vt./@使沮喪;,/vt./@使消沉;
 delete ,/v./@刪除;
