--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -815,6 +815,7 @@ lecture ,/n./@講座;
 leecher ,/n./@吸血騾;,/n./@吸血鬼;
 leisure ,/adj./@空閑的;,/n./@閑暇;
 lengthy ,/adj./@漫長的;
+lenient ,/adj./@仁慈的;,/adj./@寬大的;,/adj./@寬宏的;,/adj./@寬厚的;,/adj./@寬鬆的;
 leopard ,/n./@豹子;
 leprosy ,/n./@麻风病;
 lettuce ,/n./@生菜;,/n./@萵苣;
@@ -1351,6 +1352,7 @@ sterile ,/adj./@不育的;,/adj./@無菌的;,/adj./@貧瘠的;
 steward ,/n./@侍者;
 stickle ,/v./@堅持;,/v./@猶豫;,/v./@遲疑;
 stipend ,/n./@養老金;,/n./@獎學金;,/n./@定期津貼;
+stoical ,/adj./@堅忍的;,/adj./@禁慾的;
 stomach ,/n./@胃;
 storage ,/n./@存儲;,/n./@貯藏;
 strange ,/adj./@奇怪的;
