--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -1059,7 +1059,7 @@ rhetoric ,/n./@修辭;,/n./@修辭學;,/n./@雄辯;,/n./@言辞;,/n./@辭令;,/n
 rhinitis ,/n./@鼻炎;
 ricochet ,/vi./@跳飛;,/vi./@跳射;,/n./@跳飛;,/n./@跳彈;
 ridicule ,/v./@嘲笑;,/vt./@揶揄;,/vt./@奚落;
-rigorous ,/adj./@嚴厲的;
+rigorous ,/adj./@嚴厲的;,/adj./@嚴格的;,/adj./@嚴密的;,/adj./@嚴峻的;,/adj./@嚴酷的;
 robotics ,/n./@機器人學;
 romantic ,/adj./@浪漫的;
 roommate ,/n./@室友;
