--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -291,6 +291,7 @@ memorabilia
 merchandise
 meritocracy
 metaphysics
+metastasize
 methodology
 microscopic
 mindfulness
@@ -338,6 +339,7 @@ personality
 perspective
 pessimistic
 planetarium
+pluralistic
 poltergeist
 polygrapher
 pomegranate
