--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -123,6 +123,7 @@ autism
 autumn
 avatar
 avenue
+averse
 aviate
 avowal
 babble
@@ -413,6 +414,7 @@ defend
 defile
 define
 deform
+defuse
 degree
 deject
 delete
