--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -815,6 +815,7 @@ lecture
 leecher
 leisure
 lengthy
+lenient
 leopard
 leprosy
 lettuce
@@ -1351,6 +1352,7 @@ sterile
 steward
 stickle
 stipend
+stoical
 stomach
 storage
 strange
