--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -1213,7 +1213,7 @@ stiff ,/adj./@拘謹的;,/adj./@僵硬的;,/adj./@剛強的;,/adj./@強烈的;,/
 still ,/adv./@一直;,/adv./@仍然;
 sting ,/v./@刺;,/v./@蟄;
 stock ,/n./@儲備;,/n./@股票;
-stoic ,/redirected./@target="stoical";,/n./@禁慾主義者;
+stoic ,/redirected./@target="stoical";,/n./@禁慾主義者;,/redirected./@target="Stoic";
 Stoic ,/adj./@斯多葛學派的;,/n./@斯多葛學派哲學家;
 stone ,/n./@石頭;
 stood ,/v./@站;
