--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -56,7 +56,7 @@ ampere ,/n./@安培;
 amulet ,/n./@护身符;,/n./@避邪物;
 analog ,/n./@模拟;,/n./@类似;
 anchor ,/n./@錨;,/v./@固定;
-anemic ,/adj./@無活力的;
+anemic ,/adj./@無活力的;,/adj./@貧血的;,/adj./@虛弱的;,/adj./@衰弱的;
 animal ,/n./@動物;
 animus ,/n./@敵意;
 anneal ,/vt./@退火;
@@ -463,6 +463,7 @@ dismay ,/v./@沮喪;
 dispel ,/vt./@驅散;,/vt./@驅逐;,/vt./@消除;
 disuse ,/v./@廢止;,/n./@廢止;
 divert ,/vt./@轉向;,/vt./@轉移;,/vt./@娛樂;
+divest ,/vt./@剝奪;,/vt./@剝除;,/vt./@賣掉;,/vt./@出售;
 divide ,/v./@拆分;
 divine ,/adj./@神聖的;
 doctor ,/n./@醫生;,/n./@博士;,/vt./@治療;,/vt./@修理;,/vt./@竄改;
