--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -54,6 +54,7 @@ amiable ,/adj./@和藹的;,/adj./@亲切的;,/adj./@亲切友好的;
 amnesty ,/n./@大赦;
 amongst ,/prep./@在之中;
 amplify ,/v./@放大;,/v./@详述;,/vt./@擴大;,/vt./@誇張;,/vt./@增強;
+anaemic ,/redirected./@target="anemic";
 analogy ,/n./@類比;,/n./@類似;,/n./@類推;
 analyse ,/v./@分析;
 analyze ,/v./@分析;
