--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -31,6 +31,7 @@ agronomist ,/n./@農學家;,/n./@農藝學家;
 allegation ,/n./@主张;,/n./@断言;
 allegiance ,/n./@忠誠;
 allocation ,/n./@分配;
+altruistic ,/adj./@利他主義的;,/adj./@無私的;
 amalgamate ,/v./@合併;
 amateurish ,/adj./@外行的;,/adj./@業餘的;,/adj./@不熟練的;
 ambassador ,/n./@大使;
