--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -62,6 +62,7 @@ coincidence ,/n./@巧合;
 collaborate ,/v./@合作;,/v./@勾结;,/v./@通敌;
 collocation ,/n./@搭配;,/n./@佈置;,/n./@組合;
 combination ,/n./@结合;,/n./@联合;,/n./@组合;,/n./@化合;
+combustible ,/adj./@可燃的;,/adj./@易激動的;
 comfortable ,/adj./@舒適的;
 commandante ,/n./@司令官;
 commandment ,/n./@戒条;,/n./@戒律;,/n./@命令;
@@ -141,6 +142,7 @@ diffraction ,/n./@衍射;
 dilapidated ,/adj./@荒废的;,/adj./@破败的;
 disapproval ,/n./@不批准;,/n./@不同意;
 discernible ,/adj./@可識別的;,/adj./@可辨別的;,/adj./@可分辨的;,/adj./@可察覺的;,/adj./@可認識的;
+discernment ,/n./@洞察力;,/n./@識別力;,/n./@洞察;,/n./@識別;
 discrepancy ,/n./@不符;,/n./@差異;,/n./@不一致;
 disposition ,/n./@性情;,/n./@性格;,/n./@倾向;,/n./@意向;,/n./@兴趣;,/n./@布置;,/n./@部署;
 dissipation ,/n./@损耗;,/n./@浪费;,/n./@消散;
