--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -437,6 +437,7 @@ embolden ,/v./使@有膽量;
 emigrant ,/n./@移民;
 emigrate ,/v./@移居;
 eminence ,/n./@显赫;,/n./@卓越;
+emissary ,/n./@密使;,/n./@特使;,/n./@間諜;,/adj./@密使的;,/adj./@間諜的;
 emission ,/n./@射出;
 emphasis ,/n./@重点;
 emphatic ,/adj./@明确的;,/adj./@坚决的;,/adj./@坚定的;,/adj./@明显的;,/adj./@重读的;,/adj./@断然的;
