--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -62,6 +62,7 @@ coincidence
 collaborate
 collocation
 combination
+combustible
 comfortable
 commandante
 commandment
@@ -141,6 +142,7 @@ diffraction
 dilapidated
 disapproval
 discernible
+discernment
 discrepancy
 disposition
 dissipation
