--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -56,6 +56,7 @@ chlorophyll ,/n./@葉綠素;
 chloroplast ,/n./@葉綠體;
 chloroprene ,/n./@氯丁二烯;
 cholesterol ,/n./@胆固醇;
+chronically ,/adv./@慢性地;,/adv./@長期地;
 clairvoyant ,/n./@先知;,/adj./@洞悉未来的;
 clandestine ,/adj./@隱藏的;,/adj./@秘密的;
 coincidence ,/n./@巧合;
@@ -114,7 +115,7 @@ convocation ,/n./@召集;,/n./@集會;,/n./@評議會;
 corporation ,/n./@公司;,/n./@法人;
 correlation ,/n./@关联;,/n./@相互關係;,/n./@相關性;,/n./@相關;
 corroborate ,/v./@证实;
-countenance ,/n./@面容;,/n./@表情;,/n./@支持;
+countenance ,/n./@面容;,/n./@表情;,/n./@支持;,/n./@臉色;,/n./@面貌;
 counterfeit ,/v./@伪造;
 countermand ,/v./@取消;
 counterpart ,/n./@相当的物;
@@ -296,6 +297,7 @@ metaphysics ,/n./@形而上学;
 metastasize ,/vi./@轉移;,/vi./@擴散;
 methodology ,/n./@方法論;
 microscopic ,/adj./@精微的;,/adj./@微小的;,/adj./@顯微鏡的;,/adj./@只能從顯微鏡裡看到的;
+millenarian ,/n./@千禧年主義者;
 mindfulness ,/n./@留心;,/n./@察覺;,/n./@正念;,/n./@注意;,/n./@覺知;
 mischievous ,/adj./@恶意的;,/adj./@惡作劇的;,/adj./@傷害性的;,/adj./@有害的;
 misconstrue ,/vt./@誤會;,/vt./@误解;
