--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -33,6 +33,7 @@ interpretation ,/n./@翻譯;,/n./@解釋;,/n./@口譯;
 interpretative ,/adj./@解釋的;,/adj./@解釋性的;,/adj./@說明性的;
 interpupillary ,/adj./@瞳孔间的;
 methodological ,/adj./@方法論的;
+millenarianism ,/n./@千禧年主義;
 mountaineering ,/n./@登山;,/n./@登山運動;
 multiplication ,/n./@乘法;,/n./@增加;
 nanotechnology ,/n./@納米科技;,/n./@納米技術;
