--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -641,7 +641,7 @@ mild ,/adj./@溫柔的;
 mile ,/n./@英里;
 milk ,/n./@乳@汁;
 mill ,/v./@碾磨;,/n./@磨坊;
-mime ,/n./@啞劇;,/n./@小醜;
+mime ,/n./@啞劇;,/n./@小醜;,/n./@啞劇表演;,/n./@模仿表演;
 mind ,/n./@思想;,/n./@想法;
 mine ,/pron./@我的;,/n./@礦藏;,/v./@開采;
 mint ,/n./@薄荷;,/n./@造幣廠;,/v./@鑄幣;
