--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -949,6 +949,7 @@ moment ,/n./@時刻;
 Monday ,/n./@星期一;
 monkey ,/n./@猴子;
 morale ,/n./@士氣;,/n./@斗志;,/n./@精神面貌;
+morass ,/n./@沼澤;,/n./@困境;,/n./@混亂;
 morbid ,/adj./@病態的;,/adj./@消極的;,/adj./@恐怖的;
 morgue ,/n./@陳屍所;,/n./@停尸房;,/n./@太平间;,/n./@資料室;
 morose ,/adj./@鬱悶的;,/adj./@孤僻的;,/adj./@陰鬱的;,/adj./@陰沉的;
