--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -186,6 +186,7 @@ carousel ,/n./@旋转木马;
 carriage ,/n./@运输;,/n./@四轮马车;,/n./@车厢;
 Carthage ,/n./@迦太基;
 cashmere ,/n./@羊絨;
+castrate ,/vt./@閹割;
 casually ,/adj./@随便的;
 casualty ,/n./@傷亡;,/n./@伤亡人员;,/n./@受害者;,/n./@急诊室;
 catalyse ,/redirected./@target="catalyze";
