--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -943,6 +943,7 @@ reposeful ,/adj./@平穩的;,/adj./@沉著的;
 reprehend ,/v./@指責;,/v./@斥責;,/n./@責備;
 represent ,/v./@代表;
 reprimand ,/v./@谴责;,/vt./@訓斥;,/vt./@斥責;
+reprobate ,/adj./@無賴的;,/adj./@邪惡的;,/adj./@為神所棄的;,/vt./@排斥;,/vt./@責備;,/vt./@譴責;,/n./@無賴;,/n./@惡棍;
 reproduce ,/v./@复制;,/v./@繁殖;,/v./@生殖;,/vt./@重現;,/vt./@再現;,/vt./@再生產;,/vt./@再生長;
 repudiate ,/v./@否認;,/v./@拒絕接受;
 repugnant ,/adj./@令人厭惡的;,/adj./@令人反感的;,/adj./@令人憎惡的;,/adj./@討厭的;,/adj./@令人作嘔的;,/adj./@抵觸的;,/adj./@衝突的;,/adj./@矛盾的;
