--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -56,6 +56,7 @@ chlorophyll
 chloroplast
 chloroprene
 cholesterol
+chronically
 clairvoyant
 clandestine
 coincidence
@@ -296,6 +297,7 @@ metaphysics
 metastasize
 methodology
 microscopic
+millenarian
 mindfulness
 mischievous
 misconstrue
